--- a/src/TestComponent/TestComponent.scss
+++ b/src/TestComponent/TestComponent.scss
@@ -1,19 +1,5 @@
-@import "../variables.scss";
-@import "../typography.scss";
+// Generated with util/create-component.js
 
-.test-component {
-  background-color: $harvey-white;
-  border: 1px solid $harvey-black;
-  padding: 16px;
-  width: 360px;
-  text-align: center;
+.foo-bar {
 
-  .heading {
-    @include heading;
-  }
-
-  &.test-component-secondary {
-    background-color: $harvey-black;
-    color: $harvey-white;
-  }
 }
